[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menu_ScriptReal.gd" type="Script" id=2]
[ext_resource path="res://PNG/texto.png" type="Texture" id=3]
[ext_resource path="res://sprites/0053fdf6a88ac5255870a7ae474bc157.jpg" type="Texture" id=4]
[ext_resource path="res://PNG/shipPink_manned.png" type="Texture" id=5]
[ext_resource path="res://PNG/shipYellow_manned.png" type="Texture" id=6]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="0053Fdf6A88Ac5255870A7Ae474Bc157" type="Sprite" parent="."]
position = Vector2( 513, 303 )
scale = Vector2( 0.552083, 0.52 )
texture = ExtResource( 4 )

[node name="Texto" type="Sprite" parent="0053Fdf6A88Ac5255870A7Ae474Bc157"]
position = Vector2( 0, -74.9999 )
scale = Vector2( 1.84849, 1.75769 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -46.0
margin_right = 100.0
margin_bottom = 46.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="VBoxContainer"]
modulate = Color( 0.976471, 0.929412, 0.929412, 1 )
self_modulate = Color( 1, 0.341176, 0.341176, 1 )
margin_right = 200.0
margin_bottom = 20.0
text = "Figuras"

[node name="Button2" type="Button" parent="VBoxContainer"]
modulate = Color( 0.976471, 0.929412, 0.929412, 1 )
self_modulate = Color( 1, 0.341176, 0.341176, 1 )
margin_top = 24.0
margin_right = 200.0
margin_bottom = 44.0
text = "Operaciones"

[node name="Button3" type="Button" parent="VBoxContainer"]
modulate = Color( 0.976471, 0.929412, 0.929412, 1 )
self_modulate = Color( 1, 0.341176, 0.341176, 1 )
margin_top = 48.0
margin_right = 200.0
margin_bottom = 68.0
text = "Longitudes"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.976471, 0.929412, 0.929412, 1 )
self_modulate = Color( 0.341176, 0.901961, 1, 1 )
margin_top = 72.0
margin_right = 200.0
margin_bottom = 92.0
text = "Salir"

[node name="ShipPinkManned" type="Sprite" parent="."]
position = Vector2( 115, 116 )
texture = ExtResource( 5 )

[node name="ShipYellowManned" type="Sprite" parent="."]
position = Vector2( 874, 440 )
texture = ExtResource( 6 )

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
